--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
 
 [dependencies]
-libc = "0.2.16"
+libc = "0.2"
 libloading = "0.3"
-
-[dependencies.zmq]
-git = "https://github.com/erickt/rust-zmq.git"
+zmq-sys = "0.8"
+zmq = "0.8"
